--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-.App {
-  text-align: center;
-}
+
 
 .App-logo {
   height: 40vmin;
@@ -11,6 +9,15 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+.App {
+  text-align: center;
+}
+
+button {
+  margin: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
 }
 
 .App-header {
